different changes for phone gap

--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,85 @@
 /*
     Author: Briana Oree
-	Creation Date:
-	Title: FirstPhone gap app
-	Revised:
-	Purpose: get used tp phone gab
-	Notes:
+    Creation Date: 
+    Title: First Phone gap app
+    Revised:
+    Purpose: get used to phone gap
+    Notes:
 */
 body{
-   background-color: lightblue;
+    background-color: lightblue;
+    user-select: none;
+    overflow-x: hidden;
+}
+#frontPanel{
+  position: absolute;
+  left: 0;
+  right: 0; 
+  top:0;  
+  bottom: 0;
+  width: 100%;
+  height: 100%;  
+  background: hsl(184, 70%, 18%);
+  box-shadow: -10px 0 10px gray;
+  transition: left 0.5s ease;
+  overflow-x: hidden;
+  z-index: 1;
+}
+
+#backPanel{
+    position: fixed;
+    left: 0;
+    right: 0; 
+    top:0;  
+    bottom: 0;
+    padding-right: 20%;
+    padding-left: 5%;
+    z-index: 0;
+    background-color: lightblue;
+    font-size: 2rem;
+    user-select: text;
+    overflow-y: scroll;
+  
 }
 
 .banner{
-   position: fixed;
-   left: 0;
-   right: 0;
-   margin: auto;
-   text-align: center;
-   padding: 1%;
-   font-size: 1rem;
-   color: white;
-   font-family: sans-serif;
-   background-color: teal;
-   opacity: 0.5;
+    position: absolute;
+    left: 0;
+    right: 0;    
+    margin: auto;
+    text-align: center;
+    padding: 5px;
+    font-size: 2.5rem;
+    color: hsl(184, 70%, 18%);
+    background-color: hsl(184, 70%, 35%);
+    text-shadow: 0 1px 0 hsl(184, 70%, 50%);
+    font-family: sans-serif;
+    font-weight: bold;
+    transition: left 0.5s ease;  
+    vertical-align: bottom;
+    z-index: 2;
 }
 
+
 .banner-top{
-   top: 0;
+    top:0;
 }
 .banner-bottom{
-   bottom: 0;
+    bottom: 0;
 }
+#menu{
+  float:left;
+  cursor: pointer;
+}
+
+#content{
+  width: 100%;
+  height: 100%;
+  color: white;
+  font-family: sans-serif;
+  font-size: 1.5rem;
+}
+
 
 
 
